--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
 				</div>
 				<div class="medium-4 columns">
 					<label>Title
-						<input type="text" placeholder="Notification Title" ng-model="main.newNotification.title" />
+						<input type="text" placeholder="Notification Title" ng-model="main.newNotification.header" />
 					</label>
 				</div>
 				<div class="medium-4 columns">
 					<label>Type
-						<select ng-model="main.newNotification.type">
+						<select ng-model="main.newNotification.category">
 							<option value="info">Info</option>
 							<option value="warning">Warning</option>
 							<option value="error">Error</option>
@@ -45,7 +45,7 @@
 				</div>
 				<div class="medium-8 columns left">
 					<label>Body
-						<textarea ng-model="main.newNotification.message" placeholder="Notification Body"></textarea>
+						<textarea ng-model="main.newNotification.content" placeholder="Notification Body"></textarea>
 					</label>
 				</div>
 				<div class="small-12 columns">
